# dtkit-patch

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs  xbox_game_pass.rs
