[package]
name = "dtkit-patch"
version = "0.1.4"
authors = ["ManShanko <deathage@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ManShanko/dtkit-patch"

[dependencies]
steam_find = { git = "https://github.com/ManShanko/steam_find", rev = "0e070bb1e1604588f2dc5d727b44719b188a67ad" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"