[package]
name = "dtkit-patch"
version = "0.1.4"
authors = ["ManShanko <deathage@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ManShanko/dtkit-patch"

[dependencies]
steam_find = { git = "https://github.com/ManShanko/steam_find", rev = "c7ab9376cd18a4e02a84e61aac92ca9ec70c7031" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"