[package]
name = "dtkit-patch"
version = "0.1.8"
authors = ["manshanko <manshanko@wartide.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manshanko/dtkit-patch"

[profile.release]
opt-level = "s"
lto = "thin"
panic = "abort"

[dependencies]
steam_find = { git = "https://github.com/manshanko/steam_find", rev = "8825430236d2bf3bfd118029fbe94ca0b7888674" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"